# jsonschema-form-tui

./: AGENT.md  AGENTS.md  Cargo.toml  README.md  output.json
.github/workflows/: release.yml
schema/: basic.json  deploy.json  enum-array.json  material.json  profile.json  wafer-mask-layout.schema.json
src/: lib.rs  main.rs
src/app/: actions.rs  mod.rs  reducer.rs  state.rs
src/domain/: bundled.rs  filter.rs  form.rs  mod.rs  validation.rs
src/infra/: clipboard.rs  fs.rs
src/ui/: app.rs
