[package]
name = "jsonschema-form-tui"
version = "0.2.1"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0"
arboard = "3.4"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
indexmap = { version = "2.7", features = ["serde"] }
jsonschema = { version = "0.18", features = ["draft202012"] }
ratatui = "0.29"
tui-textarea = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
unicode-width = "0.2"

[dev-dependencies]
insta = "1.42"
tempfile = "3.15"
